Atualização do projeto rinha-spring-virtual-threads para java 21