@@ -1,16 +1,16 @@
 plugins {
     id("java")
-    id("org.springframework.boot") version "3.1.3"
+    id("org.springframework.boot") version "3.1.4"
     id("io.spring.dependency-management") version "1.1.3"
-    id("org.graalvm.buildtools.native") version "0.9.24"
+    id("org.graalvm.buildtools.native") version "0.9.27"
 }
 
 group = "org.example"
-version = "0.0.1"
+version = "0.0.2"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
@@ -27,19 +27,4 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
-}
-
-tasks {
-    val preview = "--enable-preview"
-    withType<org.springframework.boot.gradle.tasks.run.BootRun> {
-        jvmArgs = mutableListOf(preview)
-    }
-    withType<JavaExec> {
-        jvmArgs = mutableListOf(preview)
-    }
-    withType<JavaCompile> {
-        options.encoding = "UTF-8"
-        options.compilerArgs.add(preview)
-        options.compilerArgs.add("-Xlint:preview")
-    }
 }
